log
Fri May  6 15:45:17 UTC 2022: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[0]->data;
                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
3c8c917
